--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -20,13 +20,14 @@
         <a href="{{ '/' | absolute_url }}">
           <h1>{{ page.title }}</h1>
         </a>
+		<h3> ---- {{ page.tag }}</h3>
         <h2>{{ page.description }}</h2>
       </div>
     </header>
 
     <div id="content-wrapper">
       <div class="inner clearfix">
-        <section id="main-content">
+        <section id="main-content" style="width:100%;">
           {{ content }}
         </section>
 
