update binary file and credit

--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -36,15 +36,15 @@
         </section>
 
 		<aside id="sidebar">
-			<a href="{{ '/assets/files/CookMap-v1-macos.zip' | absolute_url }}" class="button">
+			<a href="{{ '/assets/files/CookMap-v1.1-macos.zip' | absolute_url }}" class="button">
 			  <small>Download binary</small>
 			  Mac 
 			</a>
-			<a href="{{ '/assets/files/CookMap-v1-windows.zip' | absolute_url }}" class="button">
+			<a href="{{ '/assets/files/CookMap-v1.1-windows.zip' | absolute_url }}" class="button">
 			  <small>Download binary</small>
 			  Windows
 			</a>
-			<a href="{{ '/assets/files/CookMap-v1-linux.zip' | absolute_url }}" class="button">
+			<a href="{{ '/assets/files/CookMap-v1.1-linux.tar.gz' | absolute_url }}" class="button">
 			  <small>Download binary</small>
 			  Linux
 			</a>
