--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -41,7 +41,7 @@
 
 		<p><a href="https://github.com/hzh0512" target="_blank"><img src="assets/images/github.svg" style="width:32px;margin:3px"/></a>
 		   <a href="https://linkedin.com/in/zihao-he" target="_blank"><img src="assets/images/linkedin.svg" style="width:32px;margin:3px"/></a>
-		   <a href="mailto:zihaohe@cmu.edu"><img src="assets/images/email.svg" style="width:32px;margin:3px"" /></a></p>
+		   <a href="mailto:hzh0512@gmail.com"><img src="assets/images/email.svg" style="width:32px;margin:3px"" /></a></p>
 
         </aside>
       </div>
