--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -37,7 +37,7 @@
 
 		<h1>Zihao He</h1>
 
-		<h3>Master Student in CS at CMU (MSCS Program)</h3>
+		<h3>Software Engineer at Facebook Seattle</h3>
 
 		<p><a href="https://github.com/hzh0512" target="_blank"><img src="assets/images/github.svg" style="width:32px;margin:3px"/></a>
 		   <a href="https://linkedin.com/in/zihao-he" target="_blank"><img src="assets/images/linkedin.svg" style="width:32px;margin:3px"/></a>
